bug-fix/0.9.x Payload-vehicle and payloaders are now tintable (so as to better distinguish themselves from other mod added items in larger mod-packs); remove 'se-' prefix from 'ipbm-rocket-parts' when SE is present; improved the payloader icon graphic

--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -31,8 +31,8 @@ configurable-nukes-rocket-control-unit-weight-modifier=[item=rocket-control-unit
 configurable-nukes-ballistic-rocket-silo-stack-size=[item=ipbm-rocket-silo]Stack size
 configurable-nukes-ballistic-rocket-silo-weight-modifier=[item=ipbm-rocket-silo]Weight modifier
 
-configurable-nukes-ballistic-rocket-part-stack-size=[item=rocket-part]Stack size
-configurable-nukes-ballistic-rocket-part-weight-modifier=[item=rocket-part]Weight modifier
+configurable-nukes-ballistic-rocket-part-stack-size=[item=ipbm-rocket-part]Stack size
+configurable-nukes-ballistic-rocket-part-weight-modifier=[item=ipbm-rocket-part]Weight modifier
 
 [mod-setting-description]
 configurable-nukes-cooldown-modifier=Multiplier of the cooldown between shots.\n\ni.e. The lower this number, the faster nukes can be fired.
