--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -38,25 +38,25 @@ configurable-nukes-ballistic-rocket-silo-crafting-time=[item=ipbm-rocket-silo]Ba
 configurable-nukes-ballistic-rocket-silo-input-multiplier=[item=ipbm-rocket-silo]Ballistic rocket silo input multiplier
 configurable-nukes-ballistic-rocket-silo-result-count=[item=ipbm-rocket-silo]Ballistic rocket silo result count
 
-configurable-nukes-ballistic-rocket-part-crafting-time=[item=rocket-part]Ballistic rocket part crafting time
-configurable-nukes-ballistic-rocket-part-input-multiplier=[item=rocket-part]Ballistic rocket part input multiplier
-configurable-nukes-ballistic-rocket-part-result-count=[item=rocket-part]Ballistic rocket part result count
+configurable-nukes-ballistic-rocket-part-crafting-time=[item=ipbm-rocket-part]Ballistic rocket part crafting time
+configurable-nukes-ballistic-rocket-part-input-multiplier=[item=ipbm-rocket-part]Ballistic rocket part input multiplier
+configurable-nukes-ballistic-rocket-part-result-count=[item=ipbm-rocket-part]Ballistic rocket part result count
 
-configurable-nukes-intermediate-ballistic-rocket-part-crafting-time=[item=rocket-part]Intermediate recipe crafting time
-configurable-nukes-intermediate-ballistic-rocket-part-input-multiplier=[item=rocket-part]Intermediate input multiplier
-configurable-nukes-intermediate-ballistic-rocket-part-result-count=[item=rocket-part]Intermediate recipe result count
+configurable-nukes-intermediate-ballistic-rocket-part-crafting-time=[item=ipbm-rocket-part]Intermediate recipe crafting time
+configurable-nukes-intermediate-ballistic-rocket-part-input-multiplier=[item=ipbm-rocket-part]Intermediate input multiplier
+configurable-nukes-intermediate-ballistic-rocket-part-result-count=[item=ipbm-rocket-part]Intermediate recipe result count
 
-configurable-nukes-advanced-ballistic-rocket-part-crafting-time=[item=rocket-part]Advanced recipe crafting time
-configurable-nukes-advanced-ballistic-rocket-part-input-multiplier=[item=rocket-part]Advanced input multiplier
-configurable-nukes-advanced-ballistic-rocket-part-result-count=[item=rocket-part]Advanced recipe result count
+configurable-nukes-advanced-ballistic-rocket-part-crafting-time=[item=ipbm-rocket-part]Advanced recipe crafting time
+configurable-nukes-advanced-ballistic-rocket-part-input-multiplier=[item=ipbm-rocket-part]Advanced input multiplier
+configurable-nukes-advanced-ballistic-rocket-part-result-count=[item=ipbm-rocket-part]Advanced recipe result count
 
-configurable-nukes-beyond-ballistic-rocket-part-crafting-time=[item=rocket-part]Beyond recipe crafting time
-configurable-nukes-beyond-ballistic-rocket-part-input-multiplier=[item=rocket-part]Beyond input multiplier
-configurable-nukes-beyond-ballistic-rocket-part-result-count=[item=rocket-part]Beyond recipe result count
+configurable-nukes-beyond-ballistic-rocket-part-crafting-time=[item=ipbm-rocket-part]Beyond recipe crafting time
+configurable-nukes-beyond-ballistic-rocket-part-input-multiplier=[item=ipbm-rocket-part]Beyond input multiplier
+configurable-nukes-beyond-ballistic-rocket-part-result-count=[item=ipbm-rocket-part]Beyond recipe result count
 
-configurable-nukes-beyond-2-ballistic-rocket-part-crafting-time=[item=rocket-part]Beyond alternative, recipe crafting time
-configurable-nukes-beyond-2-ballistic-rocket-part-input-multiplier=[item=rocket-part]Beyond alternative, input multiplier
-configurable-nukes-beyond-2-ballistic-rocket-part-result-count=[item=rocket-part]Beyond alternative, recipe result count
+configurable-nukes-beyond-2-ballistic-rocket-part-crafting-time=[item=ipbm-rocket-part]Beyond alternative, recipe crafting time
+configurable-nukes-beyond-2-ballistic-rocket-part-input-multiplier=[item=ipbm-rocket-part]Beyond alternative, input multiplier
+configurable-nukes-beyond-2-ballistic-rocket-part-result-count=[item=ipbm-rocket-part]Beyond alternative, recipe result count
 
 [mod-setting-description]
 configurable-nukes-atomic-bomb-crafting-time=Crafting time in seconds
