--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -27,6 +27,8 @@ configurable-nukes-payload-vehicle-recipe-allow-none=[item=cn-payload-vehicle]Al
 configurable-nukes-payload-vehicle-crafting-machine=[item=cn-payload-vehicle]Payload vehicle crafting machine
 configurable-nukes-payload-vehicle-additional-crafting-machines=[item=cn-payload-vehicle]Additional payload vehicle crafting machines
 
+configurable-nukes-payloader-do-tint=[item=payloader]Do tint payloaders
+configurable-nukes-payloader-tint-base=[item=payloader]Payloader base tint
 configurable-nukes-payloader-recipe=[item=payloader]Recipe
 configurable-nukes-payloader-recipe-allow-none=[item=payloader]Allow no recipe
 configurable-nukes-payloader-crafting-machine=[item=payloader]Payloader crafting machine
@@ -102,30 +104,37 @@ configurable-nukes-ballistic-rocket-silo-recipe-allow-none=[item=ipbm-rocket-sil
 configurable-nukes-ballistic-rocket-silo-crafting-machine=[item=ipbm-rocket-silo]Ballistic rocket silo crafting machine
 configurable-nukes-ballistic-rocket-silo-additional-crafting-machines=[item=ipbm-rocket-silo]Ballistic rocket silo additional crafting machines
 
-configurable-nukes-ballistic-rocket-part-recipe=[item=rocket-part]Ballistic rocket part basic recipe
-configurable-nukes-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Ballistic rocket part allow no recipe
-configurable-nukes-ballistic-rocket-part-crafting-machine=[item=rocket-part]Ballistic rocket part crafting machine
-configurable-nukes-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Ballistic rocket part additional crafting machines
+configurable-nukes-ballistic-rocket-part-do-tint=[item=ipbm-rocket-part]Do tint ballistic rocket parts
+configurable-nukes-ballistic-rocket-part-tint-base=[item=ipbm-rocket-part]Ballistic rocket part base tint
 
-configurable-nukes-intermediate-ballistic-rocket-part-recipe=[item=rocket-part]Intermediate recipe
-configurable-nukes-intermediate-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Intermediate allow no recipe
-configurable-nukes-intermediate-ballistic-rocket-part-crafting-machine=[item=rocket-part]Intermediate crafting machine
-configurable-nukes-intermediate-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Intermediate, additional crafting machines
+configurable-nukes-ballistic-rocket-part-tint-primary=[item=ipbm-rocket-part]Ballistic rocket part primary tint
+configurable-nukes-ballistic-rocket-part-tint-secondary=[item=ipbm-rocket-part]Ballistic rocket part secondary tint
+configurable-nukes-ballistic-rocket-part-tint-tertiary=[item=ipbm-rocket-part]Ballistic rocket part tertiary tint
 
-configurable-nukes-advanced-ballistic-rocket-part-recipe=[item=rocket-part]Advanced recipe
-configurable-nukes-advanced-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Advanced allow no recipe
-configurable-nukes-advanced-ballistic-rocket-part-crafting-machine=[item=rocket-part]Advanced crafting machine
-configurable-nukes-advanced-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Advanced, additional crafting machines
+configurable-nukes-ballistic-rocket-part-recipe=[item=ipbm-rocket-part]Ballistic rocket part basic recipe
+configurable-nukes-ballistic-rocket-part-recipe-allow-none=[item=ipbm-rocket-part]Ballistic rocket part allow no recipe
+configurable-nukes-ballistic-rocket-part-crafting-machine=[item=ipbm-rocket-part]Ballistic rocket part crafting machine
+configurable-nukes-ballistic-rocket-part-additional-crafting-machines=[item=ipbm-rocket-part]Ballistic rocket part additional crafting machines
 
-configurable-nukes-beyond-ballistic-rocket-part-recipe=[item=rocket-part]Beyond recipe
-configurable-nukes-beyond-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Beyond allow no recipe
-configurable-nukes-beyond-ballistic-rocket-part-crafting-machine=[item=rocket-part]Beyond crafting machine
-configurable-nukes-beyond-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Beyond, additional crafting machines
+configurable-nukes-intermediate-ballistic-rocket-part-recipe=[item=ipbm-rocket-part]Intermediate recipe
+configurable-nukes-intermediate-ballistic-rocket-part-recipe-allow-none=[item=ipbm-rocket-part]Intermediate allow no recipe
+configurable-nukes-intermediate-ballistic-rocket-part-crafting-machine=[item=ipbm-rocket-part]Intermediate crafting machine
+configurable-nukes-intermediate-ballistic-rocket-part-additional-crafting-machines=[item=ipbm-rocket-part]Intermediate, additional crafting machines
 
-configurable-nukes-beyond-2-ballistic-rocket-part-recipe=[item=rocket-part]Beyond alternative, recipe
-configurable-nukes-beyond-2-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Beyond alternative, allow no recipe
-configurable-nukes-beyond-2-ballistic-rocket-part-crafting-machine=[item=rocket-part]Beyond alternative, crafting machine
-configurable-nukes-beyond-2-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Beyond alternative, additional crafting machines
+configurable-nukes-advanced-ballistic-rocket-part-recipe=[item=ipbm-rocket-part]Advanced recipe
+configurable-nukes-advanced-ballistic-rocket-part-recipe-allow-none=[item=ipbm-rocket-part]Advanced allow no recipe
+configurable-nukes-advanced-ballistic-rocket-part-crafting-machine=[item=ipbm-rocket-part]Advanced crafting machine
+configurable-nukes-advanced-ballistic-rocket-part-additional-crafting-machines=[item=ipbm-rocket-part]Advanced, additional crafting machines
+
+configurable-nukes-beyond-ballistic-rocket-part-recipe=[item=ipbm-rocket-part]Beyond recipe
+configurable-nukes-beyond-ballistic-rocket-part-recipe-allow-none=[item=ipbm-rocket-part]Beyond allow no recipe
+configurable-nukes-beyond-ballistic-rocket-part-crafting-machine=[item=ipbm-rocket-part]Beyond crafting machine
+configurable-nukes-beyond-ballistic-rocket-part-additional-crafting-machines=[item=ipbm-rocket-part]Beyond, additional crafting machines
+
+configurable-nukes-beyond-2-ballistic-rocket-part-recipe=[item=ipbm-rocket-part]Beyond alternative, recipe
+configurable-nukes-beyond-2-ballistic-rocket-part-recipe-allow-none=[item=ipbm-rocket-part]Beyond alternative, allow no recipe
+configurable-nukes-beyond-2-ballistic-rocket-part-crafting-machine=[item=ipbm-rocket-part]Beyond alternative, crafting machine
+configurable-nukes-beyond-2-ballistic-rocket-part-additional-crafting-machines=[item=ipbm-rocket-part]Beyond alternative, additional crafting machines
 
 configurable-nukes-rocket-control-unit-research-prerequisites=[item=rocket-control-unit]Prerequisite technology to rocket-control-unit research
 configurable-nukes-rocket-control-unit-research-ingredients=[item=rocket-control-unit]Science packs required for rocket-control-unit reseach
